<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            app:layout_constraintBottom_toTopOf="@id/linearButton"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:src="@drawable/ic_baseline_image_24"
            android:id="@+id/gambarAdd"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/linearButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/gambarAdd"
            >

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                app:cornerRadius="20dp"
                android:text="@string/camera"
                android:id="@+id/cameraButton"
                android:textAllCaps="false"
                android:backgroundTint="@color/coklat"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                app:cornerRadius="20dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/galleryButton"
                android:text="@string/gallery"
                android:textAllCaps="false"
                android:backgroundTint="@color/coklat"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            app:layout_goneMarginTop="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            android:id="@+id/cardParent"
            android:background="@android:color/transparent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/linearButton"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/gambarAdd"
            app:layout_constraintStart_toStartOf="@id/gambarAdd">

            <EditText
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:drawablePadding="8dp"
                android:textSize="12sp"
                android:hint="@string/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_baseline_description_24"
                android:id="@+id/text_description"/>

        </androidx.cardview.widget.CardView>


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/cardParent"
            app:layout_constraintStart_toStartOf="@id/cardParent"
            app:layout_constraintEnd_toEndOf="@id/gambarAdd" />


        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tambah_gambar"
            app:cornerRadius="20dp"
            android:id="@+id/add_image"
            android:backgroundTint="@color/coklat"
            app:layout_constraintTop_toBottomOf="@id/cardParent"
            app:layout_constraintStart_toStartOf="@id/cardParent"
            app:layout_constraintEnd_toEndOf="@id/gambarAdd"
            android:layout_marginTop="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>