<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">




    <ImageView
        android:layout_marginTop="40dp"
        android:id="@+id/gambarAccount"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_account_box_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/gambarAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/title"
        android:text="@string/create_account"
        android:alpha="0"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:textStyle="bold" />


    <com.candra.submissiononeintermediate.view.UsernameView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:inputType="textPersonName"
        android:id="@+id/editTextUsername"
        android:alpha="0"
        android:drawablePadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <com.candra.submissiononeintermediate.view.EmailView
        android:layout_width="0dp"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/edit_text_email"
        android:layout_marginStart="5dp"
        android:alpha="0"
        android:drawablePadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.candra.submissiononeintermediate.view.MyEditText
        android:layout_width="0dp"
        android:alpha="0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/edit_text_password"
        android:layout_marginStart="5dp"
        android:drawablePadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:alpha="0"
        android:id="@+id/sign_up_button"
        android:backgroundTint="@color/coklat"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:alpha="0"
        android:id="@+id/textOr"
        android:layout_marginTop="5dp"
        android:textAllCaps="true"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textOr"
        app:layout_constraintEnd_toEndOf="@id/sign_up_button"
        app:layout_constraintStart_toStartOf="@id/sign_up_button"
        app:cornerRadius="20dp"
        android:text="@string/login"
        android:alpha="0"
        android:id="@+id/login"
        android:backgroundTint="@color/coklat" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textOr"
        app:layout_constraintEnd_toEndOf="@id/sign_up_button"
        app:layout_constraintStart_toStartOf="@id/sign_up_button"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>